# adventofcode2024

./: .gitignore
c01/: CMakeLists.txt  Makefile  blink.c  commands.gdb  compile_commands.json
c02/: blink.c
c03/: blink.c
c04/: blink.c
c05/: blink.c
c06/: blink.c
c07/: blink.c
c08/: blink.c
c09/: blink.c
c11/: blink.c
r01/: Makefile  commands.gdb
r01/src/: main.rs
r02/src/: main.rs
r03/: Cargo.toml
r03/src/: main.rs
r04/src/: main.rs
r05/src/: main.rs
r07/src/: main.rs
r08/src/: main.rs
r09_host/: Cargo.toml
r09_host/src/: main.rs
r10/src/: main.rs
r10_host/: Cargo.toml
r10_host/src/: main.rs
r11/: Cargo.toml
r11/src/: main.rs
r11_host/: Cargo.toml
r11_host/src/: main.rs
r12_host/: Cargo.toml
r12_host/src/: main.rs
r13_host/: Cargo.toml
r13_host/src/: main.rs
r14_host/: Cargo.toml
r14_host/src/: main.rs
r15_host/: Cargo.toml
r15_host/src/: main.rs
r16_host/: Cargo.toml
r16_host/src/: main.rs
r17_host/: Cargo.toml
r17_host/src/: main.rs
r18_host/: Cargo.toml
r18_host/src/: main.rs
r19_host/: Cargo.toml
r19_host/src/: main.rs
r20_host/: Cargo.toml
r20_host/src/: main.rs
r21_host/: Cargo.toml
r21_host/src/: main.rs
r22_host/: Cargo.toml
r22_host/src/: main.rs
r23_host/: Cargo.toml
r23_host/src/: main.rs
r24_host/: Cargo.toml
r24_host/src/: main.rs
r25_host/: Cargo.toml
r25_host/src/: main.rs
